Auto stash before rebase of "main"

--- a/assets/config/file_config_CArg_Gv_TEI.json
+++ b/assets/config/file_config_CArg_Gv_TEI.json
@@ -2,7 +2,22 @@
 	"editionUrls": [
 		{
 			"type": "main",
-			"value":["assets/data/CArg_Mt_TEI.xml", "assets/data/CArg_Gv_TEI.xml", "assets/data/CArg_Lc_TEI.xml", "assets/data/CArg_Mc_TEI.xml"],
+			"value":"assets/data/CArg_Mt_TEI.xml",
+			"enable": true
+		}
+		{
+			"type": "main",
+			"value": "assets/data/CArg_Gv_TEI.xml",
+			"enable": true
+		},
+		{
+			"type": "main",
+			"value": "assets/data/CArg_Lc_TEI.xml",
+			"enable": true
+		},
+		{
+			"type": "main",
+			"value": "assets/data/CArg_Mc_TEI.xml",
 			"enable": true
 		}
 	],
